<resources>
    <!-- action bar strings -->
    <string name="app_name">BOOMmates</string>
    <string name="login_title">Log In</string>
    <string name="signup_title">Sign Up</string>
    <string name="join_group_title">Join Group</string>
    <string name="chore_manager_title">Manage Tasks</string>
    <string name="group_settings_title">Group Settings</string>

    <!-- login strings -->
    <string name="minimum_password">Password too short (6 character minimum)</string>
    <string name="auth_failed">Invalid email and password combination</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOG IN</string>
    <string name="btn_link_to_login">Already registered? Log in!</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="err_msg_email">Please enter a valid email</string>
    <string name="err_msg_required">Required field</string>
    <string name="err_msg_password">Six characters including letter and number required</string>
    <string name="btn_link_to_signup">Don\'t have an account? Sign up!</string>
    <string name="successful_registration">Registration successful!</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="err_msg_password_match">Passwords do not match</string>
    <string name="failed_registration">An account associated with that email already exists</string>
    <string name="created_group">New group associated with your account</string>
    <string name="btn_existing_apt">JOIN EXISTING GROUP</string>
    <string name="btn_new_apt">CREATE NEW GROUP</string>
    <string name="hint_apt">Roommate\'s Email</string>
    <string name="chooser_directions">Join a group one of your roommates created or create a new group for you and your roommates</string>
    <string name="create_account_directions">Create a new BOOMmates account</string>
    <string name="err_msg_group_id">No group associated with that email</string>
    <string name="signup_cancel_fail">Cannot cancel sign up at the moment</string>
    <string name="signup_cancel_success">Sign up cancelled</string>
    <string name="password_reset_success">Password reset link sent to email</string>
    <string name="password_reset_fail">No account exists for that email</string>
    <string name="btn_forgot_password">Reset Your Password</string>

    <!-- menu strings -->
    <string name="menu_edit_tasks">Manage tasks</string>
    <string name="menu_remove_members">Manage members</string>
    <string name="menu_account_settings">Account settings</string>


    <!-- X explanation strings -->
    <string name="first_x_explanation">First BOOM\nThis BOOM will disappear if you do not receive another BOOM within 24 hours</string>
    <string name="second_x_explanation">Second BOOM\nAfter receiving this BOOM you will have a 24 hour grace period to complete your task</string>
    <string name="third_x_explanation">Third BOOM\nYou are vulnerable to receiving your final two BOOMs for 24 hours after your grace period, after those 24 hours all your BOOMs are reset</string>
    <string name="fourth_x_explanation">Fourth BOOM\nYou will be exposed to your roommates as the one slacking on this task upon receiving this BOOM</string>

    <!-- other strings -->
    <string name="header">, your task for this week is</string>
    <string name="boom">BOOM</string>
    <string name="err_chore_exists">A task with that name already exists</string>
    <string name="err_num_chores">Cannot add more tasks than number of group members</string>
    <string name="no_chore">Nothing!</string>
    <string name="timer_reset">until BOOMs reset</string>
    <string name="timer_vulnerable">left in grace period</string>
    <string name="btn_remove_members">Remove Group Members</string>
    <string name="btn_change_admin">Change Group Admin</string>
    <string name="btn_leave_group">Leave Group</string>
    <string name="prompt_add_chore">Enter name of new task</string>
    <string name="remove">REMOVE</string>
    <string name="member_manager_title">Manage Members</string>
    <string name="admin_manager_title">Appoint New Admin</string>
    <string name="set_admin">APPOINT</string>
    <string name="left_group">You have successfully left the group</string>
    <string name="no_booms">No BOOMs, keep it up!</string>
    <string name="edit_tasks_warning">WARNING\nAdding or removing tasks will also reset BOOMs for all existing tasks</string>
    <string name="btn_account_password">CHANGE PASSWORD</string>
    <string name="btn_account_leave">LEAVE GROUP</string>
    <string name="btn_account_delete">DELETE ACCOUNT</string>
    <string name="verify_email_title">Verify Email</string>
    <string name="account_settings_title">Account Settings</string>
    <string name="btn_account_logout">LOG OUT</string>
    <string name="account_deleted">Account deleted</string>
    <string name="password_change_success">Password change link sent to email</string>
    <string name="password_change_fail">Cannot send password change link at the moment</string>
    <string name="hint_member_email">User\'s Email</string>
    <string name="hint_chore_name">Task Name</string>
    <string name="err_invalid_email">Please enter a valid email</string>
    <string name="err_invalid_user">No user with that email exists</string>
    <string name="err_unavailable_user">User is already a member of a different group</string>
    <string name="err_duplicate_user">User is already a member of this group</string>
    <string name="member_added">added to group</string>
    <string name="join_group_directions">If one of your roommates already made a group, ask them to add you\n\nOR</string>
    <string name="member_alert">Add a new group member</string>
    <string name="chore_alert">Add a new task</string>
    <string name="hint_name">Name</string>
    <string name="btn_account_name">CHANGE DISPLAY NAME</string>
    <string name="name_alert">Enter your new display name</string>
    <string name="name_change_success">Display name successfully changed</string>
    <string name="err_msg_password_length">Invalid password</string>
    <string name="exposed">You\'ve been exposed as the slacker</string>
    <string name="instructions_a">Ask your group admin to add some chores so you can start BOOMing</string>
    <string name="admin_instructions_a">Add some chores from the menu ↗️ to start BOOMing️</string>
    <string name="instructions_b">Make sure the admin also adds all your roommates to the group, we don\'t want anyone slacking!</string>
    <string name="admin_instructions_b">Make sure you also add all your roommates to the group, we don\'t want anyone slacking!</string>
</resources>
